Archive2/07/bf944539486224/output
main.cpp:5:3: error: cannot initialize a variable of type 'A' with an rvalue of type 'int'
A a = 2; // cannot initialize a variable of type 'A' with an rvalue of type 'int'
  ^   ~
main.cpp:6:3: error: cannot initialize a variable of type 'A' with an rvalue of type 'int'
A b = 3; // cannot initialize a variable of type 'A' with an rvalue of type 'int'
  ^   ~
2 errors generated.
